--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>CareXchange</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <link rel="shortcut icon" type="image/png" href="app/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="app/images/favicon.ico"/>
     <!-- lightbox -->
     <link rel="stylesheet" type="text/css" href="lib/plugins/lightbox2/dist/css/lightbox.css"/>
     <!-- Bootstrap 3.3.4 -->
